# movie-recommendations

./: README.md  server.py
backend/: weaviate_image_search.py  weaviate_image_test.py  weaviate_setup.py
backend/movie_recommendations/: .env.example  README.md  pyproject.toml
backend/movie_recommendations/src/movie_recommendations/: main.py
docker-weaviate/: docker-compose.yml
src/: App.tsx
src/components/: MovieCard.tsx  MovieGrid.tsx  MovieModal.tsx  QuickFilters.tsx  SearchBar.jsx  SearchBar.tsx
src/data/: sampleMovies.ts
src/types/: movie.ts
