[project]
name = "movie_recommendations"
version = "0.1.0"
description = "movie_recommendations using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0",
]

[project.scripts]
kickoff = "movie_recommendations.main:kickoff"
plot = "movie_recommendations.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
